syntax = "proto3";

package payment;

option go_package = "payment";

// PaymentService 服务定义
service PaymentService {
  rpc Charge(ChargeReq) returns (ChargeResp) {}
}

// 信用卡信息
message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}

// 支付请求
message ChargeReq {
  float amount = 1;
  CreditCardInfo credit_card = 2;
  string order_id = 3;
  uint32 user_id = 4;
}

// 支付响应
message ChargeResp {
  string transaction_id = 1;
}
